Fix contrast issue

--- a/styles/index.css
+++ b/styles/index.css
@@ -4,7 +4,7 @@
 
 html {
   --purple: #f5ebff;
-  --primary: #665ffa;
+  --primary: #5851f9;
   --text: #000;
   --yellow: #f7df1e;
   --blue: #2965f1;
